make the deleteAll best effort